fix: alignment imgs

--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,13 @@
 }
 .site-header{
     min-height: 80vh;
-    display: flex;
-    align-items: center;
     padding: 50px 0px;
     width: 90%;
     margin: auto;
+}
+.container-homepage .site-header{
+    display: flex;
+    align-items: center;
 }
 .hamburger{
     display: none;
